app/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Manrope", sans-serif;
}

/* START: General styles */
.max-width {
  @apply max-w-[1440px] mx-auto;
}
.padding-x {
  @apply sm:px-16 px-6;
}
.padding-y {
  @apply py-4;
}
.flex-center {
  @apply flex items-center justify-center;
}
.flex-between {
  @apply flex justify-between items-center;
}
.custom-button {
  @apply flex flex-row relative justify-center items-center py-3 px-6 outline-none;
}
.text-signed-in {
  @apply custom-button;
  font-size: 0.85rem;
}

.show-more-button,
.go-back-button {
  @apply w-full flex-center gap-5 mt-10;
}
/* END: General styles */

/* START: Hero styles */
.hero {
  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto -mt-14;
}
.hero__text-container {
  @apply flex-1 pt-36 padding-x ml-4;
}
.hero__title {
  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold;
}
.hero__subtitle {
  @apply text-[27px] text-black-100 font-light mt-5;
}
.hero__image-container {
  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
}
.hero__image {
  @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
}
.hero__image-overlay {
  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
}
/* END: Hero styles */

/* START: Loading status bar styles */
.loading-status-bar {
  @apply absolute top-0 left-0 right-0 w-full bg-gray-200 rounded-full h-1.5 mb-0 dark:bg-gray-700 opacity-75;
}
.loading-status-bar__filled {
  @apply bg-blue-600 h-full rounded-full dark:bg-blue-500;
}
/* END: Loading status bar styles */

/* START: Footer styles */
.footer {
  @apply flex flex-col text-black-100  mt-5 border-t border-gray-100;
}

.footer__links-container {
  @apply flex max-md:flex-col flex-wrap justify-between gap-5 sm:px-16 px-6 py-10;
}

.footer__rights {
  @apply flex flex-col justify-start items-start gap-6;
}

.footer__links {
  @apply flex-1 w-full flex md:justify-end flex-wrap max-md:mt-10 gap-20;
}

.footer__link {
  @apply flex flex-col gap-6 text-base min-w-[170px];
}

.footer__copyrights {
  @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
}

.footer__legal-docs-link {
  @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
}
/* END: Footer styles */

/* START: Catalog styles */
.catalog__container {
  @apply relative max-width padding-x padding-y;
}
.catalog__text-container {
  @apply max-width padding-x flex flex-col items-start gap-y-2.5 text-black-100 justify-center;
}
.catalog__search-area {
  /* @apply flex flex-col relative w-full padding-x padding-y mx-auto justify-center align-middle; */
  @apply max-width padding-x mt-4;
}
.catalog__results {
  @apply max-width padding-y grid 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-8;
}
.catalog__results .catalog__buttons-container {
  @apply flex-center flex-row gap-4;
}
/* END: Catalog styles */

/* START: Details Card styles */
.details-card {
  @apply w-full flex flex-col justify-center items-start p-6 text-black-100 bg-primary-blue-100 hover:bg-white hover:shadow-md rounded-3xl;
}

.details-card__content {
  @apply w-full flex justify-between items-start gap-2;
}

.details-card__content-title {
  @apply text-[22px] leading-[26px] font-bold capitalize;
}

.details-card__price {
  @apply flex mt-6 text-[32px] leading-[38px] font-extrabold;
}

.details-card__price-dollar {
  @apply self-start text-[14px] leading-[17px] font-semibold;
}

.details-card__price-day {
  @apply self-end text-[14px] leading-[17px] font-medium;
}

.details-card__image {
  @apply relative w-full h-40 my-3 object-contain;
}

.details-card__icon-container {
  @apply flex group-hover:invisible w-full justify-between text-grey;
}

.details-card__icon {
  @apply flex flex-col justify-center items-center gap-2;
}

.details-card__icon-text {
  @apply text-[14px] leading-[17px];
}

.details-card__btn-container {
  @apply hidden group-hover:flex absolute bottom-0 w-full z-10;
}
/* END: Details Card styles */

/* START: Dialog */
.dialog {
  @apply relative z-30;
}
.dialog__backdrop {
  @apply fixed inset-0 bg-black bg-opacity-25;
}
.dialog__modalbox-container {
  @apply fixed inset-0 overflow-y-auto;
}
.dialog__modalbox-content {
  @apply flex min-h-full items-center justify-center p-4 text-center;
}
.dialog__panel {
  @apply relative w-full max-w-lg max-h-[90vh] overflow-y-auto transform rounded-2xl bg-white p-6 text-left shadow-xl transition-all flex flex-col gap-5;
}
.dialog__panel-close {
  @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-blue-100 rounded-full;
}
/* END: Dialog */

/* START: Details styles */
.details__dialog-panel {
  @apply relative w-full max-w-lg max-h-[90vh] overflow-y-auto transform rounded-2xl bg-white p-6 text-left shadow-xl transition-all flex flex-col gap-5;
}

.details__close-btn {
  @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-blue-100 rounded-full;
}
.details__main-image {
  @apply relative w-full h-40 bg-pattern bg-cover bg-center rounded-lg;
}
.details__columns {
  @apply flex gap-3;
}
.details__main {
  @apply flex-1 flex flex-col gap-3;
}
.details__columns-item {
  @apply flex-1 relative w-full h-24 bg-primary-blue-100 rounded-lg;
}
.details__name {
  @apply font-semibold text-xl capitalize;
}
.details__tech {
  @apply mt-3 flex flex-wrap gap-4;
}
.details__tech-item {
  @apply flex justify-between gap-5 w-full text-right;
}
.details__showcase {
  @apply flex-1 flex flex-col gap-2;
}
/* END: Details styles */

/* START: searchbar styles */
.searchbar {
  @apply flex items-center justify-start max-sm:flex-col w-full relative max-sm:gap-4 max-w-3xl;
}
.searchbar__item {
  @apply mr-2 w-full;
}
.searchbar__input {
  /* rounded-l-full max-sm:rounded-full  */
  @apply w-full h-[48px] py-4 pl-10 rounded-full bg-light-white outline-none focus:outline-none cursor-pointer text-sm text-grey;
}
.searchbar-combobox {
  @apply relative w-full;
}
.searchbar__img-container {
  @apply absolute ml-3 mt-3.5;
}
.searchbar__img {
  @apply w-[20px] h-[20px];
}
.searchbar__submit-btn {
  @apply -ml-4 rounded-lg z-10;
}
.searchbar__filter-container {
  /* @apply w-full flex  gap-2; */
  @apply w-full flex flex-wrap justify-start items-center gap-2;
}
.searchbar__filter-group {
  @apply flex w-full gap-5 flex-between items-center;
}
/* END: searchbar styles */

/* START: Search Custom filters styles */
.custom-filter__listbox {
  @apply relative w-fit z-10;
}
.custom-filter__btn {
  @apply relative w-full min-w-[127px] flex justify-between items-center cursor-default rounded-lg bg-white py-2 px-3 text-left shadow-md sm:text-sm border;
}

.custom-filter__options {
  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
}
.custom-filter__options {
  @apply relative cursor-default select-none py-2 px-4;
}

/* END: Search Custom filters styles */

/* START: search manufacturer styles */
.search-manufacturer__options {
  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
}

.search-manufacturer__option {
  @apply cursor-default select-none py-2 pl-10 pr-4;
}
/* END: search manufacturer styles */

